vlib/v/scanner/tests/shebang_outside_vsh_err.out
vlib/v/scanner/tests/shebang_outside_vsh_err.vv:3:1: error: a shebang is only valid at the top of the file
    1 | module foo
    2 | 
    3 | #!/usr/bin/env -S v
      | ^
    4 | 
    5 | import os
