vlib/v/scanner/tests/shebang_outside_vsh_err.vv
module foo

#!/usr/bin/env -S v

import os
